<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/login_icone_dog"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/icone_do_id_dog"
        android:src="@drawable/ic_animal_paw_print"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30" />

    <android.support.v7.widget.CardView
        android:id="@+id/login_card_view"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_icone_dog"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">


            <TextView
                android:id="@+id/login_informativo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/login_insira_email"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.035" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:theme="@style/AppCompat.EditText"
                android:hint="@string/login_exemplo_email"
                android:autofillHints="@string/login_exemplo_email"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="@+id/login_informativo"
                app:layout_constraintStart_toStartOf="@+id/login_informativo"
                app:layout_constraintTop_toBottomOf="@+id/login_informativo"/>

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/login_entrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:text="@string/login_entrar"
        app:layout_constraintEnd_toEndOf="@+id/login_card_view"
        app:layout_constraintStart_toStartOf="@+id/login_card_view"
        app:layout_constraintTop_toBottomOf="@+id/login_card_view" />

    <ProgressBar
        android:id="@+id/login_progresbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:theme="@style/AppCompat.ProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/login_card_view"
        app:layout_constraintStart_toStartOf="@+id/login_card_view"
        app:layout_constraintTop_toBottomOf="@+id/login_card_view" />


</android.support.constraint.ConstraintLayout>