<resources>
    <string name="app_name">ID dog</string>
    <string name="icone_do_id_dog">icone do id dog</string>

    <string name="login_insira_email">Insira um endereço de e-mail válido</string>
    <string name="login_exemplo_email">dogfun@idwall.co</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_entendido">Entendido</string>

    <string name="imagem_dogfun">imagem de um dogfun</string>
    <string name="imagem_dogfun_expandida">imagem de um dogfun expandida</string>

    <string name="controller_erro_transmissao">Erro de Transmissão</string>



    <!--teste-->
    <string name="login_email_invalido">Email is not valid</string>
</resources>
